--- a/capitulos/references.bib
+++ b/capitulos/references.bib
@@ -1,35 +1,8 @@
-
-@article{Harper2002,
-	title = {Influenza},
-	author = {Harper, Scott and Klimov, Alexander and Uyeki, Timothy and Fukuda, Keiji},
-	year = {2002},
-	month = {12},
-	date = {2002-12},
-	journal = {Clinics in Laboratory Medicine},
-	pages = {863--882},
-	volume = {22},
-	number = {4},
-	doi = {10.1016/s0272-2712(02)00022-7},
-	url = {http://dx.doi.org/10.1016/s0272-2712(02)00022-7},
-	langid = {en}
-}
-
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+@book{pearl2018book,
+  title={The book of why: the new science of cause and effect},
+  author={Pearl, Judea and Mackenzie, Dana},
+  year={2018},
+  publisher={Basic books}
 }
 
 
@@ -47,19 +20,3 @@
 	url = {http://dx.doi.org/10.1007/s00267-012-9972-9},
 	langid = {en}
 }
-
-@article{Tiihonen2020,
-	title = {Commentary on Robert Whitaker's viewpoint},
-	author = {Tiihonen, Jari and Taipale, Heidi and Correll, Christoph U.},
-	year = {2020},
-	month = {10},
-	date = {2020-10-26},
-	journal = {Psychological Medicine},
-	pages = {2653--2654},
-	volume = {50},
-	number = {16},
-	doi = {10.1017/s0033291720003591},
-	url = {http://dx.doi.org/10.1017/S0033291720003591},
-	langid = {en}
-}
-
